@@ -179,20 +179,18 @@ class PGDialect_psycopg2(PGDialect):
         psycopg = __import__('psycopg2')
         return psycopg
     
-    _unwrap_connection = None
-    
-    def visit_pool(self, pool):
+    def on_connect(self):
+        base_on_connect = super(PGDialect_psycopg2, self).on_connect()
         if self.dbapi and self.use_native_unicode:
             extensions = __import__('psycopg2.extensions').extensions
-            def connect(conn, rec):
-                if self._unwrap_connection:
-                    conn = self._unwrap_connection(conn)
-                    if conn is None:
-                        return
+            def connect(conn):
                 extensions.register_type(extensions.UNICODE, conn)
-            pool.add_listener({'first_connect': connect, 'connect':connect})
-        super(PGDialect_psycopg2, self).visit_pool(pool)
-        
+                if base_on_connect:
+                    base_on_connect(conn)
+            return connect
+        else:
+            return base_on_connect
+            
     def create_connect_args(self, url):
         opts = url.translate_connect_args(username='user')
         if 'port' in opts:
