@@ -138,6 +138,20 @@ class DefaultDialect(base.Dialect):
    
         self.do_rollback(connection.connection)
  
+    def on_connect(self):
+        """return a callable which sets up a newly created DBAPI connection.
+        
+        This is used to set dialect-wide per-connection options such as isolation
+        modes, unicode modes, etc.
+        
+        If a callable is returned, it will be assembled into a pool listener
+        that receives the direct DBAPI connection, with all wrappers removed.
+        
+        If None is returned, no listener will be generated.
+        
+        """
+        return None
+        
     def _check_unicode_returns(self, connection):
         # Py2K
         if self.supports_unicode_statements:
