@@ -37,7 +37,6 @@ class ZooMarkTest(TestBase):
         
         recorder = lambda: dbapi_session.recorder(creator())
         engine = engines.testing_engine(options={'creator':recorder})
-        engine.dialect._unwrap_connection = engines.unwrap_connection
         metadata = MetaData(engine)
         engine.connect()
         
@@ -321,7 +320,6 @@ class ZooMarkTest(TestBase):
 
         player = lambda: dbapi_session.player()
         engine = create_engine('postgresql:///', creator=player)
-        engine.dialect._unwrap_connection = engines.unwrap_connection
         metadata = MetaData(engine)
         engine.connect()
         
